# GradCore-Tensor

./: .gitignore  404.html  CMakeLists.txt  GradientCoreConfig.cmake.in  blog.html  docs.html  index.html  markdown-page.html  sitemap.xml
.github/workflows/: deploy-docs.yml
assets/css/: styles.04a568bc.css  styles.6d8676d5.css  styles.beb00ceb.css  styles.de4d39b4.css
assets/js/: 01a85c17.c4de6c41.js  0bf3cb29.15e9bd2e.js  0bf3cb29.41aa691f.js  0bf3cb29.497e6ce9.js  0bf3cb29.9e5e2546.js  0bf3cb29.febc2453.js  0cae9bb0.0324bc41.js  0cae9bb0.1263968c.js  0cae9bb0.394b78c7.js  144350fe.8301420b.js  144350fe.d91722b3.js  144350fe.dc52d27b.js  14eb3368.0104ba2b.js  14eb3368.6b0f85b2.js  159.5e2ea96e.js  15df8608.5fffbcd2.js  15df8608.92347e30.js  15df8608.e593accf.js  17896441.2f4a2cdb.js  17896441.647988e1.js  17896441.94f56013.js  17896441.a71cfcb0.js  18c41134.d03fd8cf.js  1df93b7f.1f0ac5da.js  1df93b7f.79218026.js  1f391b9e.4a1d4ec6.js  1f391b9e.d3a92c76.js  1f4725da.565df388.js  1f4725da.569b418b.js  1f4725da.7a030f62.js  25aee49d.8609982b.js  2e47fba7.17ec8eee.js  2e47fba7.25fa534c.js  2e47fba7.c4714388.js  33fc5bb8.2aa8a05e.js  33fc5bb8.d21314f4.js  3436.aa75ea26.js  377ca38f.520dea3f.js  377ca38f.6946b96c.js  377ca38f.c41c2a4d.js  (+96 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/authors/: all-sebastien-lorber-articles.html  yangshun.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
docs/: Getting Started.html  Intro.html  get-started.html  intro.html
docs/category/: tutorial---basics.html  tutorial---extras.html  tutorials.html
docs/tutorial-basics/: congratulations.html  create-a-blog-post.html  create-a-document.html  create-a-page.html  deploy-your-site.html  markdown-features.html
docs/tutorial-extras/: manage-docs-versions.html  translate-your-site.html
docs/tutorials/: tutorial-1-california-housing.html  tutorial-2-mnist.html
docs_site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json
docs_site/docs/: Getting Started.md  Intro.md
docs_site/docs/tutorials/: _category_.json  tutorial-1-california-housing.md  tutorial-2-mnist.md
docs_site/src/css/: custom.css
docs_site/src/pages/: index.module.css  index.tsx
examples/mnist/: autoencoder.cpp  inference.cpp  run.sh  train.cpp
examples/regression_ex/: inference.cpp  run.sh  train.cpp
include/: gradient.hpp  gradient_version.hpp
include/autograd/: autograd.hpp
include/nn/: activations.hpp  linear.hpp  module.hpp  nn.hpp  sequential.hpp
include/nn/core/: module.hpp  sequential.hpp
include/nn/data/: csv_loader.hpp  dataloader.hpp  dataset.hpp
include/nn/layers/: activations.hpp  batchnorm.hpp  dropout.hpp  linear.hpp
include/nn/losses/: loss.hpp
include/nn/models/: model.hpp
include/nn/training/: trainer.hpp
include/nn/utils/: initialization.hpp
include/optim/: adagrad.hpp  adam.hpp  adamw.hpp  lbfgs.hpp  optim_utils.hpp  rmsprop.hpp  sgd.hpp
include/tensor/: prng.hpp  tensor.hpp
include/tensor/memory_cpu/: arena.hpp
src/autograd/: engine.cpp
src/autograd/ops/: add.cpp  matmul.cpp  mse_loss.cpp  relu.cpp
src/nn/core/: module.cpp
src/nn/data/: dataloader.cpp  dataset.cpp
src/nn/layers/: batchnorm.cpp  dropout.cpp
src/nn/models/: model.cpp
src/nn/utils/: initialization.cpp
src/optim/: adagrad.cpp  adam.cpp  adamw.cpp  lbfgs.cpp  rmsprop.cpp  sdg.cpp  sgd.cpp
src/tensor/: prng.cpp  tensor_create.cpp  tensor_utils.cpp  tensor_views.cpp
src/tensor/activations/: tensor_elu.cpp  tensor_gelu.cpp  tensor_hard_sigmoid.cpp  tensor_hard_swish.cpp  tensor_leaky_relu.cpp  tensor_relu.cpp  tensor_relu6.cpp  tensor_sigmoid.cpp  tensor_softmax.cpp  tensor_softplus.cpp  tensor_swish.cpp  tensor_tanh.cpp
src/tensor/activations_grad/: tensor_elu_grad.cpp  tensor_gelu_grad.cpp  tensor_hard_sigmoid_grad.cpp  tensor_hard_swish_grad.cpp  tensor_leaky_relu_grad.cpp  tensor_relu6_grad.cpp  tensor_relu_grad.cpp  tensor_sigmoid_grad.cpp  tensor_softmax_grad.cpp  tensor_softplus_grad.cpp  tensor_swish_grad.cpp  tensor_tanh_grad.cpp
src/tensor/arithmetic/: mat_mul.cpp  tensor_add.cpp  tensor_mul.cpp  tensor_scale.cpp  tensor_sub.cpp  tensor_sum.cpp
src/tensor/loss_functions/: tensor_bce_loss.cpp  tensor_bce_with_logits_loss.cpp  tensor_cosine_embedding_loss.cpp  tensor_cross_entropy_loss.cpp  tensor_hinge_loss.cpp  tensor_huber_loss.cpp  tensor_kl_div_loss.cpp  tensor_l1_loss.cpp  tensor_l1_regularization.cpp  tensor_l2_loss.cpp  (+3 more)
test/autograd/: test_xor.cpp  test_xor_nn.cpp
test/memory_cpu/: check.cpp
test/tensors/: activation_test.cpp  test_mat_mul.cpp
(+47 files in other folders)
